--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://valpvf.github.io/eliftech-delivery",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "deploy": "^1.0.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
